1. pdp instruction, demo(ing)

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -92,7 +92,7 @@
                             </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Pickup and Delivery Problem- PDP</strong></li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'pdp_introduction' %}active{% endif %}" href="{% url 'routing_logistics_app:pdp_introduction' %}">Introduction(준비중)</a>
+                                <a class="nav-link {% if active_submenu == 'pdp_introduction' %}active{% endif %}" href="{% url 'routing_logistics_app:pdp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'pdp_demo' %}active{% endif %}" href="{% url 'routing_logistics_app:pdp_demo' %}">Demo(준비중)</a>
