--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,12 +41,15 @@
                                 <a class="nav-link {% if active_submenu == 'transport_assignment_introduction' %}active{% endif %}" href="{% url 'matching_assignment_app:transport_assignment_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'assignment_demo' %}active{% endif %}" href="{% url 'matching_assignment_app:transport_assignment_demo' %}">Demo</a>
+                                <a class="nav-link {% if active_submenu == 'transport_assignment_demo' %}active{% endif %}" href="{% url 'matching_assignment_app:transport_assignment_demo' %}">Demo</a>
                             </li>
 
-                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">자원-기술 매칭</strong></li>
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Resource Skill Matching</strong></li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'assignment_introduction' %}active{% endif %}" href="{% url 'core:ready' %}">소개 (준비중)</a>
+                                <a class="nav-link {% if active_submenu == 'resource_skill_matching_introduction' %}active{% endif %}" href="{% url 'matching_assignment_app:resource_skill_matching_introduction' %}">Introduction</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'resource_skill_matching_demo' %}active{% endif %}" href="{% url 'matching_assignment_app:resource_skill_matching_demo' %}">Demo</a>
                             </li>
 
                         {% elif active_model == 'Resource Allocation' %}
@@ -57,13 +60,6 @@
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'budget_allocation_demo' %}active{% endif %}" href="{% url 'resource_allocation_app:budget_allocation_demo' %}">Demo</a>
                             </li>
-                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">financial Portfolio</strong></li>
-                            <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'financial_portfolio_introduction' %}active{% endif %}" href="{% url 'resource_allocation_app:financial_portfolio_introduction' %}">Introduction</a>
-                            </li>
-                            <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'financial_portfolio_demo' %}active{% endif %}" href="{% url 'resource_allocation_app:financial_portfolio_demo' %}">Demo(준비중)</a>
-                            </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Data Center Capacity</strong></li>
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'data_center_capacity_introduction' %}active{% endif %}" href="{% url 'resource_allocation_app:data_center_capacity_introduction' %}">Introduction</a>
@@ -72,6 +68,13 @@
                                 <a class="nav-link {% if active_submenu == 'data_center_capacity_demo' %}active{% endif %}" href="{% url 'resource_allocation_app:data_center_capacity_demo' %}">Demo</a>
                             </li>
 
+<!--                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">financial Portfolio</strong></li>-->
+<!--                            <li class="nav-item nested">-->
+<!--                                <a class="nav-link {% if active_submenu == 'financial_portfolio_introduction' %}active{% endif %}" href="{% url 'resource_allocation_app:financial_portfolio_introduction' %}">Introduction</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item nested">-->
+<!--                                <a class="nav-link {% if active_submenu == 'financial_portfolio_demo' %}active{% endif %}" href="{% url 'resource_allocation_app:financial_portfolio_demo' %}">Demo(준비중)</a>-->
+<!--                            </li>-->
                         {% elif active_model == 'Routing & Logistics' %}
                             <li class="nav-item"><strong class="sidebar-subtitle">Vehicle Routing Problem - VRP</strong></li>
                             <li class="nav-item nested">
