--- a/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_data_generation.html
+++ b/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_data_generation.html
@@ -21,7 +21,7 @@
                 <label for="num_cf_panels">Number of CF Panels (3-10):</label>
                 <select class="form-control d-inline-block w-auto" id="num_cf_panels" name="num_cf_panels" >
                     {% for i in cf_tft_panel_range %}
-                        <option value="{{ i }}" {% if i == 5 %}selected{% endif %}>{{ i }}</option>
+                        <option value="{{ i }}" {% if i == 3 %}selected{% endif %}>{{ i }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -29,7 +29,7 @@
                 <label for="num_tft_panels">Number of TFT Panels (3-10):</label>
                 <select class="form-control d-inline-block w-auto" id="num_tft_panels" name="num_tft_panels">
                     {% for i in cf_tft_panel_range %}
-                        <option value="{{ i }}" {% if i == 5 %}selected{% endif %}>{{ i }}</option>
+                        <option value="{{ i }}" {% if i == 3 %}selected{% endif %}>{{ i }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -58,7 +58,7 @@
         {# 추가적인 데이터 생성 옵션들... #}
         <div class="form-group mt-4">
             <label for="defect_rate">Approximate Defect Rate (%):</label>
-            <input type="number" class="form-control" id="defect_rate" name="defect_rate" min="0" max="100" value="10" style="width: 150px;">
+            <input type="number" class="form-control" id="defect_rate" name="defect_rate" min="0" max="100" value="25" style="width: 150px;">
             <small class="form-text text-muted">Defects will be randomly assigned based on this rate.</small>
         </div>
 
@@ -70,14 +70,12 @@
     {# 생성된 데이터 미리보기 또는 결과 표시 영역 #}
     {% if generated_data %}
     <h3 class="mt-4">Generated Data Preview</h3>
+    <div class="mt-3">
+        <a href="{% url 'matching_assignment_app:lcd_cf_tft_small_scale_demo' %}" class="btn btn-info">
+            Proceed to Small-scale Test with this data (Manual Copy/Paste)</a>
+    </div>
     <p>Based on your selections, the following data structure has been prepared (defect maps are randomly generated):</p>
     <pre><code>{{ generated_data_json_pretty }}</code></pre>
-        
-    {# 예를 들어, 생성된 데이터를 다음 단계(small_scale_demo)로 바로 보낼 수 있는 버튼/링크 추가 가능 #}
-    <div class="mt-3">
-        <a href="{% url 'matching_assignment_app:lcd_cf_tft_small_scale_demo' %}" class="btn btn-info">Proceed to Small-scale Test with this data (Manual Copy/Paste)</a>
-        {# 또는 세션/DB를 사용하여 데이터를 전달하는 로직 구현 #}
-    </div>
     {% endif %}
 
     {% if error_message %}
