--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
     {% block styles %}
-    {# 여기에 small_scale_demo.html의 스타일이 삽입됩니다. #}
     {% endblock styles %}
 </head>
 <body>
@@ -147,11 +146,11 @@
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
                                 <a class="nav-link {% if active_model == 'Matching & Assignment' %}active{% endif %}"
-                                   href="{% url 'matching_assignment_app:lcd_cf_tft_introduction' %}">Matching & Assignment</a>
+                                   href="{% url 'matching_assignment_app:matching_assignment_introduction' %}">Matching & Assignment</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {% if active_model == 'Resource Allocation' %}active{% endif %}"
-                                   href="{% url 'resource_allocation_app:budget_allocation_introduction' %}">Resource Allocation</a>
+                                   href="{% url 'resource_allocation_app:resource_allocation_introduction' %}">Resource Allocation</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {% if active_model == 'Routing & Logistics' %}active{% endif %}"
@@ -159,7 +158,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {% if active_model == 'Production & Scheduling' %}active{% endif %}"
-                                   href="{% url 'production_scheduling_app:main_introduction' %}">Production & Scheduling</a> {# 링크 수정 #}
+                                   href="{% url 'production_scheduling_app:production_scheduling_introduction' %}">Production & Scheduling</a> {# 링크 수정 #}
                             </li>
                         </ul>
                     </div>
